Update wiki page MooshakWiki through web user interface.

--- a/wiki/MooshakWiki.wiki
+++ b/wiki/MooshakWiki.wiki
@@ -13,9 +13,10 @@ The system was originally intended for contests, but it is increasingly being us
 = Details =
 
 
-   * [Virtual contests]
-   * [Test Drive]
-   * [Install]
+   * [virtualContest  Virtual contests]
+   * [testDrive Test Drive]
+   * [install Installation instructions]
+
 
 
 
